fix spacing issues of index.html by changing padding on images and text items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #logo {
-    height: 7vw;
+    height: 10vw;
     position: relative;
     top: 1.5vw;
 }
@@ -24,7 +24,7 @@ body {
 #myNavbar {
     background-color: #D9E8EE;
     height: 20vw;
-    width: 100vw;
+    width: 99vw;
     color: #845EC2;
 }
 
@@ -80,6 +80,15 @@ body {
     overflow: visible;
 }
 
+.navbar-inverse .navbar-nav>li>a{
+    color:rgb(107, 107, 184)
+}
+
+.navbar-right{
+    margin:0;
+    padding-top: 5vw;
+}
+
 footer {
     font-size: 6vw;
     text-align: center;
@@ -90,14 +99,15 @@ footer {
     display: inline;
     margin-left: 5vw;
     margin-right: 5vw;
-
+    padding-bottom: 4vw;
 }
 
 /*index.html*/
 
 #myCarousel {
-    height: 50vw;
-    max-width: 100vw;
+    position: relative;
+    left: 5vw;
+    width: 85vw;
     overflow: hidden;
 }
 
@@ -108,16 +118,13 @@ footer {
 #first-heading {
     color: #b3d0d9;
     position: relative;
-    left: 3vw;
     bottom: 2vw;
-    margin-top: 5vw;
+    margin-top: 8vw;
     font-size: 4.5vw;
-    text-align: center;
     width: 86vw;
     height: 7vw;
     background-color: rgba(107, 107, 184, 0.662);
     padding: 1%;
-    border-radius: 1vw;
 }
 
 .images {
@@ -140,11 +147,14 @@ footer {
     width: 24vw;
     height: 5vw;
     background-color: rgba(107, 107, 184, 0.662);
-    padding: 0.5%;
+    padding: 0.5vw;
 }
 
 #workshop {
-    width: 100vw;
+    position: relative;
+    bottom: 3vw;
+    width: 95vw;
+    padding-bottom: 3vw;
 }
 
 #cover-text {
@@ -152,23 +162,23 @@ footer {
     color: #b3d0d9;
     position: relative;
     left: 20vw;
-    bottom: 22vw;
+    bottom: 41vw;
     font-weight: bold;
     margin-top: 5vw;
-    font-size: 2vw;
+    font-size: 3vw;
     text-align: center;
     width: 75vw;
-    height: 25vw;
+    height: 27vw;
     background-color: rgba(107, 107, 184, 0.662);
-    padding: 1%;
+    padding: 1vw;
 }
 
 #newsletter-box {
     color: #b3d0d9;
     position: relative;
-    bottom: 10vw;
+    bottom: 33vw;
     height: 25vw;
-    width: 43vw;
+    max-width: 43vw;
     background-color: rgba(107, 107, 184, 0.662);
 }
 
@@ -192,7 +202,7 @@ footer {
     text-align: center;
     color: #b3d0d9;
     position: relative;
-    bottom: 39vw;
+    bottom: 62vw;
     left: 43vw;
     height: 33vw;
     width: 50vw;
@@ -230,7 +240,7 @@ input:hover {
 }
 
 #section-34 {
-    height: 25vw;
+    height: 2vw;
 }
 
 /* about.html */
